--- a/persoonregister/opdracht_2/home.html
+++ b/persoonregister/opdracht_2/home.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>persoonregisteer
     </title>
-    <script src="js.js"></script>
+    <script src="script.js"></script>
 
 </head>
 
